# subzero

./: .actrc  .dockerignore  .gitignore  .rustfmt.toml  COPYRIGHT.txt  Cargo.toml  Dockerfile  LICENSE.txt  README.md  Rocket.toml  TODO.md  clickhouse_sample_query.sql  clickhouse_structure_query.sql  config.toml  csq.sql  docker-compose.yml  ecdsa_p256_public.pem  postgresql_structure_query.sql  relations.json  sqlite_structure_query.sql  structure1.sql  structure2.sql  structure_query.sql  structure_test.sql
.github/: .env  docker-compose.yml
benches/: my_benchmark.rs
core/: Cargo.toml
core/benches/: README.md  docker-compose.yml  my_benchmark.rs  schema.sql
core/src/: api.rs  config.rs  dynamic_statement.rs  error.rs  lib.rs  license.rs  permissions.rs  schema.rs
core/src/formatter/: base.rs  clickhouse.rs  mod.rs  mysql.rs  postgresql.rs  sqlite.rs
core/src/parser/: mod.rs  postgrest.rs
demo/: docker-compose.yml
ffi/: Cargo.toml  Doxyfile  Makefile  README.md  build.rs
introspection/: clickhouse_introspection_query.sql  mysql_introspection_query.sql  postgresql_introspection_query.sql  sqlite_introspection_query.sql
java-bindings/: .gitignore  Makefile  README.md  dockcross-windows-shared-x64  subzero.i
js-bindings/: .gitignore  LICENSE.txt  README.md  jestconfig.json  package-lock.json  package.json  rollup.config.js  sqlTransformer.cjs
lib/: Cargo.toml
lib/src/: api.rs  config.rs  dynamic_statement.rs  error.rs  lib.rs  schema.rs
lib/src/backend/: clickhouse.rs  mod.rs  postgresql.rs  sqlite.rs
lib/src/formatter/: base.rs  clickhouse.rs  mod.rs  postgresql.rs  sqlite.rs
lib/src/frontend/: mod.rs  postgrest.rs
lib/src/parser/: postgrest.rs
pg_rest/: Cargo.toml  README.md  pg_rest.control
pg_rest/sql/: init.sql
pg_rest/src/: lib.rs
rocket/: Cargo.toml  README.md  config.toml
rocket/src/: _config.rs  error.rs  main.rs  rocket_util.rs  vhosts.rs
rocket/src/backend/: README.md  clickhouse.rs  mod.rs  mysql.rs  postgresql.rs  sqlite.rs
rocket/src/frontend/: README.md  postgrest.rs
rocket/tests/: haskell_test.rs
rocket/tests/basic/: mod.rs
rocket/tests/basic/fixtures/: init.sql
rocket/tests/clickhouse/: basic.rs  mod.rs  permissions.rs  setup.rs  tutorial.rs
rocket/tests/clickhouse/fixtures/: relations.json
rocket/tests/common/: basic.rs  permissions.rs
rocket/tests/mysql/: mod.rs  setup.rs
rocket/tests/mysql/fixtures/: permissions.json
rocket/tests/postgresql/: aggregates.rs  and_or_param.rs  auth.rs  custom_relations.rs  delete.rs  embed_disambiguation.rs  insert.rs  json_operator.rs  limits.rs  mod.rs  multiple_schemas.rs  query.rs  rpc.rs  setup.rs  singular.rs  unicode.rs  update.rs  upsert.rs
rocket/tests/postgresql/fixtures/: load.sql  permissions.json
rocket/tests/postgresql/fixtures/sql/: subzero.aggregates.sql  subzero.basic.sql
rocket/tests/postgrest/: delete.rs  embed_disambiguation.rs  multiple_schemas.rs  query.rs
rocket/tests/sqlite/: common.rs  setup.rs
scripts/: .env  add_license_header.sh  docker-build.sh  docker-manifest-push.sh  docker-push.sh  release-tag.sh
src/: api.rs  config.rs  dynamic_statement.rs  error.rs  lib.rs  main.rs  postgrest.rs  rocket_util.rs  schema.rs  vhosts.rs
subzero-core/: Cargo.toml
subzero-core-wasm/: Cargo.toml  README.md
subzero-core/benches/: my_benchmark.rs
subzero-core/src/: api.rs  config.rs  dynamic_statement.rs  error.rs  lib.rs  license.rs  permissions.rs  schema.rs
subzero-core/src/deno/: mod.rs
subzero-core/src/formatter/: base.rs  clickhouse.rs  mod.rs  mysql.rs  postgresql.rs  sqlite.rs
subzero-core/src/parser/: mod.rs  nom.rs  postgrest.rs
subzero-ffi/: Cargo.toml  Makefile  build.rs
subzero-ffi/src/: ffi.rs  lib.rs  utils.rs
subzero-ffi/test/: Makefile  test_all  test_all.c  test_all_debug
subzero-java/: .gitignore  Makefile  dockcross-linux-x64  introspection  pom.xml  pom.xml.versionsBackup  subzero.i  subzero_wrap.c
subzero-node/: .gitignore  README.md  esbuild.config.cjs  esbuild.config.js  jestconfig.json  package.json  (+5 more)
subzero-pg/: Cargo.toml  subzero.control
subzero-pg/docker-build-system/: Cargo.toml  package.sh
subzero-pg/docker-build-system/src/: main.rs
subzero-pg/docker-build-system/subzero-build-debian-bookworm/: Dockerfile
subzero-pg/sql/: init.sql
subzero-pg/src/: lib.rs
subzero-pgx/: .rustfmt.toml  Cargo.toml  subzero_pgx.control
subzero-pgx/docker-build-system/: package.sh
subzero-pgx/docker-build-system/src/: main.rs
subzero-pgx/src/: lib.rs
subzero-rocket/: Cargo.toml  permissions.json
subzero-rocket/src/: config.rs  error.rs  main.rs  rocket_util.rs
subzero-rocket/src/backend/: clickhouse.rs  mod.rs  mysql.rs  postgresql.rs  sqlite.rs
subzero-rocket/src/frontend/: postgrest.rs
subzero-rocket/tests/: haskell_test.rs  test.sql
subzero-rocket/tests/basic/: mod.rs
subzero-rocket/tests/clickhouse/: basic.rs  common.rs  mod.rs  permissions.rs  setup.rs  tutorial.rs
subzero-rocket/tests/clickhouse/fixtures/: load.sql
subzero-rocket/tests/common/: basic.rs  permissions.rs
subzero-rocket/tests/mysql/: basic.rs  common.rs  mod.rs  permissions.rs  setup.rs
subzero-rocket/tests/mysql/fixtures/: load.sql  permissions.json
subzero-rocket/tests/postgresql/: aggregates.rs  and_or_param.rs  auth.rs  common.rs  custom_relations.rs  delete.rs  embed_disambiguation.rs  insert.rs  json_operator.rs  limits.rs  multiple_schemas.rs  permissions.rs  query.rs  rpc.rs  setup.rs  singular.rs  unicode.rs  update.rs  upsert.rs
subzero-rocket/tests/postgresql/fixtures/: load.sql  relations.json  subzero.aggregates.sql  subzero.permissions.sql
subzero-rocket/tests/postgresql/fixtures/sql/: schema.sql  subzero.aggregates.sql  subzero.basic.sql  subzero.permissions.sql
subzero-rocket/tests/sqlite/: basic.rs  common.rs  mod.rs  permissions.rs  setup.rs
subzero-rocket/tests/sqlite/fixtures/: load.sql
wasm/: .gitignore  Cargo.toml  README.md
wasm/src/: lib.rs  utils.rs
wasm/test/: docker-compose.yaml  main.mjs  package-lock.json  package.json  schema.sql  server.js
wasm/tests/: web.rs
(+132 files in other folders)
