[workspace]
members = [
    "subzero-core",
    "bin",
    "subzero-wasm",
]

[patch.crates-io]
tokio-postgres = { git = "https://github.com/subzerocloud/rust-postgres" }
postgres-types = { git = "https://github.com/subzerocloud/rust-postgres" }
postgres-openssl = { git = "https://github.com/subzerocloud/rust-postgres" }
postgres-protocol = { git = "https://github.com/subzerocloud/rust-postgres" }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
# debug = true
lto = true
codegen-units = 1
panic = "abort"
# Tell `rustc` to optimize for small code size.
opt-level = "s"

