[workspace]
resolver = "2"
members = [
    "core",
    "ffi",
    "rocket",
    "wasm",
    # "pg_rest",
]
exclude = [
    "pg_rest",
    # "rocket",
    # "wasm",
    # "ffi",
]

# [patch.crates-io]
# tokio-postgres = { git = "https://github.com/subzerocloud/rust-postgres" }
# postgres-types = { git = "https://github.com/subzerocloud/rust-postgres" }
# postgres-openssl = { git = "https://github.com/subzerocloud/rust-postgres" }
# postgres-protocol = { git = "https://github.com/subzerocloud/rust-postgres" }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
# debug = true
lto = true
codegen-units = 1
panic = "abort"
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# This is for subzero-pgx build
[profile.artifacts]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
panic = "unwind"
lto = "thin"

