[package]
name = "subzero-core"
version = "3.0.1"
edition = "2018"
autobenches = false

[dependencies]
log = "0.4.14"
nom = "7.1.2"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", features = ["raw_value"] }
csv = "1.1.6"
snafu = "0.7.4"
regex = "1.7.1"
ring = "0.17.8"
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22.0"
pem = "3.0.3"
yasna = "0.5.2"

[features]
default = []
postgresql = []
clickhouse = []
sqlite = []
mysql = []

[dev-dependencies]
pretty_assertions = "1.0.0"
regex = "1.7.1"
criterion = "0.3"

[lib]
bench = false

[[bench]]
name = "my_benchmark"
harness = false

