[package]
name = "subzero-core"
version = "3.0.1"
edition = "2018"
autobenches = false

[dependencies]
log = "0.4.22"
nom = "7.1.3"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", features = ["raw_value"] }
csv = "1.3.0"
snafu = "0.8.4"
regex = "1.10.6"
ring = "0.17.8"
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22.1"
pem = "3.0.4"
yasna = "0.5.2"
itertools = "0.13.0"

[features]
default = []
postgresql = []
clickhouse = []
sqlite = []
mysql = []

[dev-dependencies]
pretty_assertions = "1.4.1"
regex = "1.10.6"
criterion = "0.5"

[lib]
bench = false

[[bench]]
name = "my_benchmark"
harness = false

