[package]
name = "subzero"
version = "0.1.0"
edition = "2018"
autobenches = false

[dependencies]
log = "0.4.14"
http = "0.2"
regex = { version="1.6.0", features=["default", "pattern"]}
url = { version = "2.2.2", optional = true }
base64 = { version = "0.13.0", optional = true }
formdata = { version = "0.13.0", optional = true }
hyper = { version = "0.14", features = ["full"] }
form_urlencoded = "1.0.1"
async-trait = "0.1.52"
combine = "=4.6.1"
lazy_static = "1.4.0"
serde = "1.0.130"
serde_json = "1.0.68"
csv = "1.1.6"
snafu = "0.6.10"
openssl = { version="0.10", optional = true }
postgres-types = { version = "0.2.2", optional = true }
tokio-postgres = { version = "0.7.4", optional = true }
postgres-openssl = { version = "0.5.0", optional = true }
tokio = { version = "1.6.1", features=[ "rt-multi-thread","process"] }
bytes = "1.1.0"
futures = "0.3.17"
deadpool-postgres = { version = "0.10.0", optional = true }
deadpool = { version = "0.9.2", optional = true }
jsonwebtoken = "7.2.0"
jsonpath_lib = "0.3.0"
rusqlite = { version = "0.26.3", features = ["array","bundled","window","series"], optional = true }
r2d2 = { version = "0.8.9", optional = true }
r2d2_sqlite = { version = "0.19.0", optional = true }


[features]
default = []
postgresql = ["postgres-types", "tokio-postgres", "deadpool-postgres", "postgres-openssl", "openssl"]
clickhouse = ["deadpool", "url", "formdata", "base64"]
sqlite = ["rusqlite", "r2d2", "r2d2_sqlite"]

[dev-dependencies]
pretty_assertions = "1.0.0"
regex = "1.4.6"
