[package]
name = "pg_rest"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib","lib"]

[features]
default = ["pg16"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11" ]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []

[dependencies]
pgrx = "=0.11.3"
heapless = "0.7"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
subzero-core = { path = "../core", features = ["postgresql"] }
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
ouroboros = "0.18.3"
url = "2.5.0"
lazy_static = "1.4"
once_cell = "1.19.0"

[dev-dependencies]
pgrx-tests = "=0.11.3"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.artifacts]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
