[package]
name = "subzero-rocket"
version = "3.0.1"
edition = "2018"
autobins = false
autobenches = false

[dependencies]
# log = "0.4.14"
# env_logger = "0.9.0"
ouroboros = "0.18"
serde = "1.0"
serde_json = "1.0.128"
bytes = "1.7.2"
rocket = "0.5.1"
subzero-core = { version = "3.0.1", path = "../core" }
http = "1.1"
async-trait = "0.1.82"
lazy_static = "1.5.0"
snafu = "0.8.4"
figment = { version = "0.10.19", features = ["toml", "env"] }
# hyper = { version = "1.4", features = ["full"], optional = true }
# hyper-util = { version = "0.1.8", features = ["full"], optional = true }
# http-body-util = { version = "0.1.0", optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
jsonwebtoken = "9.3.0"
jsonpath_lib = "0.3.0"
tokio = { version = "1.40.0", features=[ "rt-multi-thread","process"] }
# hyper-reverse-proxy = "0.5"
url = { version = "2.5.2", optional = true }
postgres-types = { version = "0.2.8", optional = true }
tokio-postgres = { version = "0.7.12", optional = true }
postgres-openssl = { version = "0.5.0", optional = true }
deadpool-postgres = { version = "0.14.0", optional = true }
deadpool = { version = "0.12.1", optional = true }

rusqlite = { version = "0.32.1", features = ["array","bundled","window","series"], optional = true }
r2d2 = { version = "0.8.10", optional = true }
r2d2_sqlite = { version = "0.25.0", optional = true }
base64 = { version = "0.22.1", optional = true }
formdata = { version = "0.13.0", optional = true }
openssl = { version="0.10", optional = true }
mysql_async = { version = "0.34", optional = true }


[features]
default = ["all"]
all = ["postgresql", "sqlite", "clickhouse", "mysql"]
# postgresql = ["subzero-core/postgresql"]
# sqlite = ["subzero-core/sqlite"]
# clickhouse = ["subzero-core/clickhouse"]
postgresql = ["subzero-core/postgresql","postgres-types", "tokio-postgres", "deadpool-postgres", "postgres-openssl", "openssl"]
clickhouse = ["subzero-core/clickhouse","subzero-core/sqlite","deadpool", "url", "formdata", "base64","hyper"]
sqlite = ["rusqlite", "r2d2", "r2d2_sqlite"]
mysql=["subzero-core/mysql", "mysql_async"]

[[bin]]
name = "subzero"
path = "src/main.rs"
bench = false

[dev-dependencies]
pretty_assertions = "1.4.1"
demonstrate = "0.4.5"
async_once = "0.2.6"
rand = "0.8.5"
serde_json = "1.0.128"
mysql = "25.0.1"
