[package]
name = "subzero-core"
version = "0.1.0"
edition = "2018"
autobenches = false

[dependencies]
log = "0.4.14"
combine = { version = "4.6.4", features = [] }
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
csv = "1.1.6"
snafu = "0.6.10"

[features]
default = []
postgresql = []
clickhouse = []
sqlite = []

[dev-dependencies]
pretty_assertions = "1.0.0"
regex = "1.4.6"
