[package]
name = "subzero-core"
version = "2.0.5"
edition = "2018"
autobenches = false

[dependencies]
log = "0.4.14"
# combine = { version = "4.6.4", features = ["std"], default-features = false }
nom = "7.1.2"
# combine = { git = "https://github.com/ruslantalpa/combine.git", rev = "8333260", default-features = false, features = ["std"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", features = ["raw_value"] }
csv = "1.1.6"
snafu = "0.7.4"
regex = "1.7.1"

[features]
default = []
postgresql = []
clickhouse = []
sqlite = []
mysql = []

[dev-dependencies]
pretty_assertions = "1.0.0"
regex = "1.7.1"
criterion = "0.3"

[lib]
bench = false

[[bench]]
name = "my_benchmark"
harness = false

