[package]
name = "subzero-ffi"
version = "2.0.8"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
ouroboros = "0.18.3"

serde_json = "1.0"

subzero-core = { version = "2.0.8", path = "../subzero-core" }
url = "2.5"
# regex = "1.7.1"

[lib]
crate-type = ["cdylib"]
name = "subzero"


# build = "build.rs"
[build-dependencies]
cbindgen = "0.26.0"


[features]
default = ["all"]
all = ["postgresql", "sqlite", "clickhouse", "mysql"]
postgresql = ["subzero-core/postgresql"]
sqlite = ["subzero-core/sqlite"]
clickhouse = ["subzero-core/clickhouse"]
mysql = ["subzero-core/mysql"]

