[package]
name = "subzero"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11" ]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []

[dependencies]
pgrx = "=0.11.3"
#hyper = { version = "0.14", features = ["full"] }
#tokio = { version = "1", features = ["full"] }
subzero-core = { path = "../subzero-core", features = ["postgresql"] }
#lazy_static = "1.4"
serde_json = "1.0.111"
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
#ouroboros = "0.15"
ouroboros = "0.18.3"
#url = "2.2"
#jsonwebtoken = "8.2.0"
#jsonpath_lib = "0.3.0"
#snafu = "0.7.4"
serde = "1.0.111"


[dev-dependencies]
pgrx-tests = "=0.11.3"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
